# self-improving-agents

./: .gitignore  BENCHMARKING.md  CLAUDE.md  MIGRATION-PLAN.md  README.md  ROADMAP.md  SKILL.md  SPEC.md  install.sh  pyproject.toml  reflect
.claude/agents/: investigate.md  keeper.md  reflect.md
.github/workflows/: publish.yml  release.yml
.reflect/: .last_run  context.md  harness  index.md
.reflect/decisions/: 0001-session-start-default-auto.md  0002-agent-agnostic-evidence-store.md
.reflect/insights/: confirm-architecture-decisions.md  keep-descriptions-aligned.md  verify-cli-signatures.md
.reflect/notes/: architecture-pivot.md
.reflect/sessions/: 2026-04-02_073406f1.md  2026-04-02_14431d42.md  2026-04-02_3f10d4ad.md  2026-04-02_e179abd8.md  2026-04-03_56cd9d49.md
.reflect/wiki/: index.md  log.md
18/f2ff24b850/: metadata.json
bench/: README.md  __init__.py  __main__.py  cli.py  compare.py  config.py
evals/: evals.json
harness/: default.py
homebrew/: reflect-cli.rb
hooks/: session-start.sh
lib/: context.py  improve.py  init.py  note.py  search.py  sources.py  status.py  version.py  why.py
reflect_cli/: __main__.py  aggregates.py  cli.py  context.py  evidence.py  improve.py  init.py  metrics.py  sessions.py  status.py  synthesize.py  timeline.py  why.py
scripts/: smoke.sh
skill/: SKILL.md
templates/: builder.md  config.yaml  context-format.md  decision-format.md  e2e-tester.md  format.yaml  gaps.md  insight-format.md  orchestrator.md  progress.md  reflection-format.md  researcher.md  session-format.md  verifier.md
(+103 files in other folders)
