[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflect-cli"
dynamic = ["version"]
description = "Repo-owned memory for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "codeyogi911" }]
keywords = ["ai", "agents", "memory", "context", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/codeyogi911/reflect"
Repository = "https://github.com/codeyogi911/reflect"
Issues = "https://github.com/codeyogi911/reflect/issues"

[project.scripts]
reflect = "reflect_cli.cli:main"

[tool.setuptools.packages.find]
include = ["reflect_cli*"]

[tool.setuptools_scm]
# Version derived from git tags (e.g. v0.1.0)
fallback_version = "0.0.0"
